<resources>
    <string name="app_name">Kiwinform</string>

    <string name="title_email">Email</string>
    <string name="subtitle_enter_email">Enter your email address</string>
    <string name="title_password">Password</string>
    <string name="subtitle_enter_password">Enter your password</string>
    <string name="title_full_name">Full Name</string>

    <!--  Login Screen   -->
    <string name="title_login">Login</string>
    <string name="subtitle_motto">Your daily reminder companion</string>
    <string name="subtitle_copyright">©2022 BRAM Inc. All Rights Reserved</string>

    <!--  Register   -->
    <string name="title_register">Register</string>
    <string name="title_confirm_password">Confirm Password</string>
    <string name="subtitle_confirm_password">Retype your password</string>
    <string name="subtitle_enter_full_name">Type your name</string>

    <!--  Getting Started   -->
    <string name="title_welcome">WELCOME !</string>
    <string name="subtitle_onboarding_welcome"><b>Welcome aboard, User!</b>\nIn this app, you will have your own virtual pet.You can have the pet remind you of\nany activities you might want to do.</string>

    <string name="title_add_plans">ADD PLANS!</string>
    <string name="subtitle_onboarding_add_plans"><b>You</b> can add your plans to the app.\nThat way, you can keep a list of all the things you want to do.</string>

    <string name="title_reminder">REMINDER!</string>
    <string name="subtitle_onboarding_reminder"><b>Your Pet</b> will remind you of your activitieswhen it’s time to do them.\nYour Pet will never let you forget !</string>

    <string name="skip_button"><u>SKIP</u></string>

    <!--  Miscellaneous  -->
    <string name="title_home">Home</string>
    <string name="title_activities">Activities</string>
    <string name="todays_activities">Today\'s Activities</string>

    <string name="title_my_plan">My Plan</string>

    <string name="title">Title</string>
    <string name="title_hint">What do you want to do?</string>
    <string name="description">Description</string>
    <string name="description_hint">Tell us more about your activity</string>

    <string name="date">Date</string>
    <string name="date_hint">When will you do it?</string>
    <string name="at_what_time">At what time?</string>
    <string name="hh">HH</string>
    <string name="mm">MM</string>

    <string name="title_save">Save</string>

    <string name="title_profile">Profile</string>
    <string name="exp">Exp</string>
    <string name="statistics">Statistics</string>
    <string name="finished_tasks">Finished Tasks</string>
    <string name="great_job">Great Job!</string>
    <string name="ongoing_tasks">Ongoing Tasks</string>
    <string name="tv_taskDone_value">50</string>
    <string name="tv_taskOngoin_value">50</string>
    <string name="dont_give_up">Don\'t Give up!</string>

    <string name="time_example">HH:MM:SS</string>
    <string name="date_example">Day, Day Month Year</string>
    <string name="title_back">Back</string>
    <string name="your_plans">Your Plans</string>
    <string name="title_hello">Hello</string>
    <string name="title_log_out">log out</string>

</resources>
