<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.register.RegisterActivity">

    <include
        android:id="@+id/toolbar_register"
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/iv_register_app_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/bear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register" />

    <TextView
        android:id="@+id/tv_register_email_input"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_register_app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_input_email"
        style="@style/CreatePageTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_register_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_input_email"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_enter_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register_name_input"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_register_input_email" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_input_name"
        style="@style/CreatePageTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_register_name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_input_name"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_enter_full_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register_password_input"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_register_input_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_input_password"
        style="@style/CreatePageTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_register_password_input"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_input_password"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_enter_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_register_confirm_password"
        style="@style/TextViewTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tl_register_input_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_register_confirm_password"
        style="@style/CreatePageTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tv_register_confirm_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_register_confirm_password"
            style="@style/TextViewTitleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subtitle_confirm_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="16dp"
        android:text="@string/title_register"
        android:textAllCaps="false"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>